--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Tutorial</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Elbek Melibayev</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum inventore consequatur qui voluptate est nobis quia similique, consequuntur minus quisquam vitae explicabo accusamus porro sed, laudantium quaerat quos. Quae, esse.</p>
 </body>
 </html>
